# multilingual_watermarking

./: .gitignore  Makefile  README.md  pyproject.toml
models/hf_models/speakleash/Bielik-4.5B-v3.0-Instruct/: README.md
multilingual_watermarking/: ForceStringLogitsProcessor.py  HashForceWatermarkDetector.py  WatermarkDetector.py  answering_output_with_logits.py  check_logits.py  embedding_and_paraphrase.py  force_hash_first_try.py  logit_modification.py  paths.py  prompts.yml  run_watermark_evaluation.py  test.py  test_hash_force_watermark_detector.py  test_watermark_detector.py  transformers_first_try.py  transformers_testing_force.py  watermark_evaluation.py
multilingual_watermarking/base_watermarking/: create_first_watermark.py  create_first_watermark_detection.py  normalizers.py
multilingual_watermarking/utils/: embedding_and_paraphrase.py  yamling.py
